<resources>
    <string name="app_name">HQS_test</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">From the Square world,\nHello, %1$s!</string>
    <string name="tile_label">Example tile</string>
    <string name="complication_label">Example complication</string>
    <string name="Initial_text">HQS Test App Started</string>
    <string name="Start_Button">Start</string>
    <string name="Pause_Button">Pause</string>
    <string name="Quit_Button">Quit</string>
    <string name="IMU_Text">IMU: </string>
    <string name="HR_text">HR: </string>
    <string name="IpInstruction_Text">Enter Server IP address and Port</string>
    <string name="Ip_Text">No IP found</string>
    <string name="Ip_Input">192.168.0.151:5000</string>
    <string name="Connect_Button">Connect</string>
</resources>