<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/IpInstruction_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="16dp"
        android:text="@string/IpInstruction_Text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/Ip_Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Connect_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="47dp"
        android:onClick="onConnectButtonClick"
        android:text="@string/Connect_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Disconnect_Button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Disconnect_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="47dp"
        android:text="@string/Quit_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Connect_Button" />

    <EditText
        android:id="@+id/Ip_Input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Ip_Input"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/Connect_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>