<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Instruction_Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Pause_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="90dp"
        android:onClick="OnPauseButtonClick"
        android:text="@string/Pause_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Start_Button"
        app:layout_constraintTop_toBottomOf="@+id/Instruction_Text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Quit_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="26dp"
        android:onClick="OnQuitButtonClick"
        android:text="@string/Quit_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Start_Button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Start_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="90dp"
        android:onClick="OnStartButtonClick"
        android:text="@string/Start_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Pause_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Instruction_Text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/HR_Value"
        android:layout_width="91dp"
        android:layout_height="18dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="1dp"
        android:text="0"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/IMU_Value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/HR_Text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HR_Text"
        android:layout_width="24dp"
        android:layout_height="19dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="29dp"
        android:text="@string/HR_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/IMU_Text"
        app:layout_constraintEnd_toStartOf="@+id/HR_Value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IMU_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="9dp"
        android:text="@string/IMU_Text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Instruction_Text"
        app:layout_constraintEnd_toStartOf="@+id/IMU_Value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HR_Text" />

    <TextView
        android:id="@+id/IMU_Value"
        android:layout_width="106dp"
        android:layout_height="18dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="9dp"
        android:text="0"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Instruction_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/IMU_Text"
        app:layout_constraintTop_toBottomOf="@+id/HR_Value" />

</androidx.constraintlayout.widget.ConstraintLayout>